cluster/gitops/networking/vpn/dns/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
# cspell:words icanhazip ipify
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns-vpn-dns
specs:
  - description: coredns-vpn-dns
    endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: coredns-vpn-dns
        app.kubernetes.io/name: coredns
    egress:
      # DNS resolution for in-cluster resources (e.g. service names) via kube-dns
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                # Service record lookups
                - matchPattern: "*.svc.cluster.local"
                # Pod CIDR PTR records
                - matchPattern: "*.32.10.in-addr.arpa"
                # Service CIDR PTR records
                - matchPattern: "*.33.10.in-addr.arpa"
                # LoadBalancer CIDR PTR records
                - matchPattern: "*.34.10.in-addr.arpa"
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
              - port: "8081"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "9153"
                protocol: TCP
